2005-08-16  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtktextview.c (gtk_text_view_retrieve_surrounding_handler): change
	from character count to byte count.  Fixes autocapitalization behavior
	with inverted question and exclamation marks.  N#16733

2005-08-16  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Allow other
	menu windows to cover other menu windows to avoid unwanted closing
	caused by wrong window stack order. N#11711

2005-08-16  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Drag drop indicator
	painting refactored to a new function draw_drop_indicator; painting
	order rearranged so that drag drop indicator is painted before the
	cell is rendered to avoid cell being covered by the drop indicator.
	N#10856

2005-08-10  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtkhbbox.c (gtk_hbutton_box_size_allocate): don't access
	children_h before we check whether children_h is non-NULL, remove
	useless check if we are at the end of the list inside the while
	loop. Fixes crashes with empty hbboxes. 

2005-08-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_insert_column)
	(gtk_tree_view_remove_column) Added allow_checkbox_mode checks
	N#16571 

2005-08-09  Luc Pionchon  <luc.pionchon@nokia.com>

	Backported upstream fix
	* gtk/gtkdialog.c (gtk_dialog_map): Don't
	try to focus the default_widget if there is 
	none.  (#169881, Thomas Leonard)  N#16576
	
2005-08-05  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk-pixbuf/io-jpeg.c (fatal_error_handler): Report out of memory
	error correctly instead of as corrupt image.  (#312674, Tommi
	Komulainen)  N#15422

2005-08-05  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Merge patch by Kristian Rietveld from GNOME CVS:

	* gtk/gtkentry.c (gtk_entry_move_forward_word): don't iterate
	past the end of the string, so pango_layout_get_cursor_pos() won't