@@ -1,3 +1,9 @@
+2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
+	
+	* gtk/gtkcalendar.c (gtk_calendar_init): Stock GTK+ mechanism for
+	determining the first day of the week with PO files replaced
+	determining it with nl_langinfo.  N#12176
+
 2005-08-16  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* gtktextview.c (gtk_text_view_retrieve_surrounding_handler): change
